<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="dev"
            type="io.edgedev.andelaproject.Developer"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="io.edgedev.andelaproject.DevDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                app:cardElevation="2dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"/>


                    <com.android.volley.toolbox.NetworkImageView
                        android:id="@+id/profileImage_Fragment"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:padding="@dimen/activity_vertical_margin">
                    </com.android.volley.toolbox.NetworkImageView>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">

                    <TextView
                        style="?android:listSeparatorTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username_txt_view"/>

                    <TextView
                        android:id="@+id/dev_githubUsername_Fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{dev.username}"
                        android:textIsSelectable="true"
                        tools:text="@string/username"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">

                    <TextView
                        style="?android:listSeparatorTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Github Profile "/>

                    <TextView
                        android:id="@+id/dev_githubProfileUrl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{dev.profile}"
                        android:textIsSelectable="true"
                        tools:text="@string/github_profile_link"
                        android:textColor="@android:color/holo_blue_dark"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">

                    <TextView
                        style="?android:listSeparatorTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/github_score"/>

                    <TextView
                        android:id="@+id/githubScore"
                        style="?android:textAppearanceLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/radom_double"
                        android:text="@{dev.score}"
                        android:textIsSelectable="true"
                        android:textColor="@android:color/holo_blue_dark"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</layout>